# scheduler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.claude/skills/screenshot/: SKILL.md
crates/k8s-bridge/: Cargo.toml
crates/k8s-bridge/src/: api.rs  binder.rs  job_store.rs  main.rs  observer.rs  solver.rs  solver_types.rs
deploy/: .env.example  docker-compose.prod.yml  kind-config.yaml  test-job.yaml  test-pod.yaml
docs/: CATALOGUE.md  milp_formulation.typ  problem_description.md  questions-and-answers.md
e2e/: conftest.py  kind-cluster-a.yaml  kind-cluster-b.yaml  quotas.json  test_api_validation.py  test_binder.py  test_deployments.py  test_preemption.py  test_races.py
infra/: README.md  main.tf  outputs.tf  setup.sh  terraform.tfvars  variables.tf
infra/k8s/: mock-chips.yaml  namespace.yaml  scheduler-rbac.yaml
py-scheduler/scheduler/: __main__.py  loop_runner.py  milp_solver.py  model.py  observability.py  server.py  solver.py  solvers.py
py-scheduler/scheduler/scenarios/: demo.jsonl  descriptions.json  failure_storm.jsonl  gang_scheduling.jsonl  multi_cluster_ramp.jsonl  node_drain.jsonl  preemption_cascade.jsonl
py-scheduler/scheduler/ui/: index.html  package-lock.json  package.json  vite.config.ts
py-scheduler/scheduler/ui/src/: App.svelte  app.css
py-scheduler/scheduler/ui/src/components/: ClusterGrid.svelte  Header.svelte  (+7 more)
py-scheduler/scripts/: build_production_scale.py
py-scheduler/tests/: conftest.py  test_loop_runner.py  test_milp_solver_options.py  test_replay.py  test_scenarios.py
scripts/: cluster_setup.py  deploy-loop.sh
(+5 files in other folders)
