[package]
name = "k8s-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_33"] }
kube = { version = "3", features = ["runtime", "client", "derive"] }
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
